--- a/front/pages/ovaresources/gev/cuestionario0.html
+++ b/front/pages/ovaresources/gev/cuestionario0.html
@@ -74,14 +74,14 @@
                                     <li><a href="idevices.html" class="no-ch">IDevices</a></li>
                                 </ul>
                             </li>
-                            <li><a href="seccin.html" class="no-ch">Sección</a></li>
+                            <li><a href="cuestionario1.html" class="no-ch">Cuestionario</a></li>
                         </ul>
                     </li>
                     <li><a href="reload.html" class="daddy">Reload</a>
                         <ul class="other-section">
                             <li><a href="cmo_se_estructura_un_paquete_scorm_y_qu_funcin_tiene_reload_editor.html" class="no-ch">Cómo se estructura un paquete SCORM y qué función tiene Reload Editor?</a></li>
                             <li><a href="conociendo_reload_editor.html" class="no-ch">Conociendo Reload Editor</a></li>
-                            <li><a href="cuestionario1.html" class="no-ch">Cuestionario</a></li>
+                            <li><a href="cuestionario2.html" class="no-ch">Cuestionario</a></li>
                         </ul>
                     </li>
                     <li><a href="scorm.html" class="daddy">SCORM</a>
@@ -105,7 +105,7 @@
                                 </ul>
                             </li>
                             <li><a href="herramientas_para_la_creacin_de_scorm.html" class="no-ch">Herramientas para la creación de SCORM</a></li>
-                            <li><a href="cuestionanrio.html" class="no-ch">Cuestionanrio</a></li>
+                            <li><a href="cuestionario3.html" class="no-ch">Cuestionario</a></li>
                         </ul>
                     </li>
                     <li><a href="lom.html" class="daddy">LOM</a>
@@ -115,7 +115,7 @@
                             <li><a href="para_que_sirven_los_metadatos.html" class="no-ch">Para que sirven los metadatos?</a></li>
                             <li><a href="editores_de_metadatos.html" class="no-ch">Editores de metadatos</a></li>
                             <li><a href="categorias_lom.html" class="no-ch">Categorias LOM</a></li>
-                            <li><a href="cuestionario2.html" class="no-ch">Cuestionario</a></li>
+                            <li><a href="cuestionario4.html" class="no-ch">Cuestionario</a></li>
                         </ul>
                     </li>
                 </ul>
@@ -272,13 +272,12 @@
                                 var msg_str = "Su puntuación es %d%%";            msg_str = msg_str.replace("%d", actualScore).replace("%%", "%");
                                 if (s) {
                                     s.innerHTML = "<div class='feedback'><p>" + msg_str + "</p></div>"; } else {
-                                    alert(msg_str);
-                                }
+                                    alert(msg_str); }
 
                             }
                             /*]]>*/</script>
                         <div class="iDevice emphasis1" >
-                            <header class="iDevice_header"><h1 class="iDeviceTitle">Cuestionario SCORM</h1></header>
+                            <header class="iDevice_header"><h1 class="iDeviceTitle">Cuestionario</h1></header>
                             <div class="iDevice_inner">
                                 <div class="iDevice_content_wrapper">
                                     <form name="quizForm98" id="quizForm98" action="#" class="quiz-test-form">
