--- a/front/pages/ovaresources/gev/cuestionario.html
+++ b/front/pages/ovaresources/gev/cuestionario.html
@@ -1,6 +1,8 @@
 <!doctype html>
 <html lang="es">
     <head>
+        <script src="../../../dist/js/config.js"></script>
+        <script src="../../../dist/js/responfunc.js"></script>
         <link rel="stylesheet" type="text/css" href="base.css" />
         <link rel="stylesheet" type="text/css" href="content.css" />
         <link rel="stylesheet" type="text/css" href="nav.css" />
@@ -140,13 +142,13 @@
                             var question4;
                             var question5;
                             var question6;
-                            var question0key=25;
-                            var question1key=26;
-                            var question2key=27;
-                            var question3key=28;
-                            var question4key=29;
-                            var question5key=30;
-                            var question6key=31;
+                            var question0key=1;
+                            var question1key=2;
+                            var question2key=3;
+                            var question3key=4;
+                            var question4key=5;
+                            var question5key=6;
+                            var question6key=7;
                             var key0 = 0;
                             var key1 = 3;
                             var key2 = 0;
@@ -252,6 +254,56 @@
 
                             }
 
+
+                           function sendbd(actualScore){
+                                console.log('hola')
+                                data={
+                                    puntaje: actualScore,
+                                    respuestas : [
+                                    {
+                                        resp:question0,
+                                        bdkey:question0key,
+                                        key:key0
+                                    },
+                                    {
+                                        resp:question1,
+                                        bdkey:question1key,
+                                        key:key1
+                                    },
+                                    {
+                                        resp:question2,
+                                        bdkey:question2key,
+                                        key:key2
+                                    },
+                                    {
+                                        resp:question3,
+                                        bdkey:question3key,
+                                        key:key3
+                                    },
+                                    {
+                                        resp:question4,
+                                        bdkey:question4key,
+                                        key:key4
+                                    },
+                                    {
+                                        resp:question5,
+                                        bdkey:question5key,
+                                        key:key5
+                                    },
+                                    {
+                                        resp:question6,
+                                        bdkey:question6key,
+                                        key:key6
+                                    }
+
+                                    ]
+
+                                } 
+
+                                responsesend(data)
+
+                            }
+
                             function calcScore2()
                             {
                                 getAnswer();
@@ -265,6 +317,7 @@
                                 msg_str = msg_str.replace("%d", actualScore).replace("%%", "%");            if (s) {
                                     s.innerHTML = "<div class='feedback'><p>" + msg_str + "</p></div>"; } else {
                                     alert(msg_str); }
+                                sendbd(actualScore)
 
                             }
                             /*]]>*/</script>
