--- a/front/pages/ovaresources/gev/cuestionario1.html
+++ b/front/pages/ovaresources/gev/cuestionario1.html
@@ -1,6 +1,8 @@
 <!doctype html>
 <html lang="es">
     <head>
+        <script src="../../../dist/js/config.js"></script>
+        <script src="../../../dist/js/responfunc.js"></script>
         <link rel="stylesheet" type="text/css" href="base.css" />
         <link rel="stylesheet" type="text/css" href="content.css" />
         <link rel="stylesheet" type="text/css" href="nav.css" />
@@ -138,6 +140,11 @@
                             var question2;
                             var question3;
                             var question4;
+                            var question0key=16;
+                            var question1key=17;
+                            var question2key=18;
+                            var question3key=19;
+                            var question4key=20;
                             var key0 = 1;
                             var key1 = 0;
                             var key2 = 0;
@@ -215,6 +222,45 @@
 
                             }
 
+                            function sendbd(actualScore){
+                                console.log('hola')
+                                data={
+                                    puntaje: actualScore,
+                                    respuestas : [
+                                    {
+                                        resp:question0,
+                                        bdkey:question0key,
+                                        key:key0
+                                    },
+                                    {
+                                        resp:question1,
+                                        bdkey:question1key,
+                                        key:key1
+                                    },
+                                    {
+                                        resp:question2,
+                                        bdkey:question2key,
+                                        key:key2
+                                    },
+                                    {
+                                        resp:question3,
+                                        bdkey:question3key,
+                                        key:key3
+                                    },
+                                    {
+                                        resp:question4,
+                                        bdkey:question4key,
+                                        key:key4
+                                    }
+
+                                    ]
+
+                                } 
+
+                                responsesend(data)
+
+                            }
+
                             function calcScore2()
                             {
                                 getAnswer();
@@ -229,6 +275,7 @@
                                     s.innerHTML = "<div class='feedback'><p>" + msg_str + "</p></div>";
                                 } else {
                                     alert(msg_str); }
+                                sendbd(actualScore)
 
                             }
                             /*]]>*/</script>
