--- a/front/pages/ovaresources/gev/cuestionario2.html
+++ b/front/pages/ovaresources/gev/cuestionario2.html
@@ -1,6 +1,8 @@
 <!doctype html>
 <html lang="es">
     <head>
+        <script src="../../../dist/js/config.js"></script>
+        <script src="../../../dist/js/responfunc.js"></script>
         <link rel="stylesheet" type="text/css" href="base.css" />
         <link rel="stylesheet" type="text/css" href="content.css" />
         <link rel="stylesheet" type="text/css" href="nav.css" />
@@ -137,6 +139,10 @@
                             var question1;
                             var question2;
                             var question3;
+                            var question0key=21;
+                            var question1key=22;
+                            var question2key=23;
+                            var question3key=24;
                             var key0 = 1;
                             var key1 = 1;
                             var key2 = 1;
@@ -200,6 +206,41 @@
 
                             }
 
+
+                            function sendbd(actualScore){
+                                console.log('hola')
+                                data={
+                                    puntaje: actualScore,
+                                    respuestas : [
+                                    {
+                                        resp:question0,
+                                        bdkey:question0key,
+                                        key:key0
+                                    },
+                                    {
+                                        resp:question1,
+                                        bdkey:question1key,
+                                        key:key1
+                                    },
+                                    {
+                                        resp:question2,
+                                        bdkey:question2key,
+                                        key:key2
+                                    },
+                                    {
+                                        resp:question3,
+                                        bdkey:question3key,
+                                        key:key3
+                                    }
+
+                                    ]
+
+                                } 
+
+                                responsesend(data)
+
+                            }
+
                             function calcScore2()
                             {
                                 getAnswer();
@@ -213,6 +254,7 @@
                                 msg_str = msg_str.replace("%d", actualScore).replace("%%", "%");            if (s) {
                                     s.innerHTML = "<div class='feedback'><p>" + msg_str + "</p></div>"; } else {
                                     alert(msg_str); }
+                                sendbd(actualScore)
 
                             }
                             /*]]>*/</script>
