listar respuestas de estudiante

--- a/front/pages/login.html
+++ b/front/pages/login.html
@@ -93,7 +93,7 @@
                         </div>
 
                         <div class="input-group mb-3">
-                            <input type="email" class="form-control" name="tipousr" id="tipousr" placeholder="tipo" required />
+                            <input type="number" class="form-control" name="tipousr" id="tipousr" placeholder="tipo" required />
                         </div>
 
 
